# ferrissh

./: CODEOWNERS  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
ferrissh/: Cargo.toml  REGEX_GUIDE.md
ferrissh-macros/: Cargo.toml
ferrissh-macros/src/: lib.rs
ferrissh/examples/: arista_eos.rs  basic_ls.rs  config_session.rs  interactive.rs  juniper.rs  multi_channel.rs  nokia_sros.rs  streaming.rs  textfsm_parsing.rs
ferrissh/examples/templates/: juniper_show_interfaces_terse.textfsm  juniper_show_version.textfsm  linux_df.textfsm  linux_ps.textfsm  linux_uname.textfsm
ferrissh/src/: error.rs  lib.rs  session.rs
ferrissh/src/channel/: buffer.rs  mod.rs  patterns.rs  pty.rs
ferrissh/src/driver/: builder.rs  channel.rs  config_session.rs  generic.rs  interactive.rs  mod.rs  payload.rs  privilege.rs  response.rs  stream.rs
ferrissh/src/platform/: confd.rs  confd_jstyle.rs  definition.rs  mod.rs  privilege_level.rs  registry.rs
ferrissh/src/platform/vendors/: juniper.rs  linux.rs  mod.rs
ferrissh/src/platform/vendors/arista/: config_session.rs  mod.rs  platform.rs
ferrissh/src/platform/vendors/arrcus_arcos/: config_session.rs  mod.rs  platform.rs
ferrissh/src/platform/vendors/juniper/: config_session.rs  mod.rs  platform.rs
ferrissh/src/platform/vendors/nokia_sros/: config_session.rs  mod.rs  platform.rs
ferrissh/src/transport/: config.rs  mod.rs  ssh.rs
ferrissh/tests/: stream_integration.rs
ferrissh/tests/common/: mod.rs
