[package]
name = "ferrissh"
version = "0.1.0"
edition = "2024"
authors = ["Fabio Swartz"]
description = "Async SSH CLI scraper library for network device automation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshbenz/ferrissh"
keywords = ["ssh", "network", "automation", "async", "cli"]
categories = ["network-programming", "asynchronous"]

[dependencies]
russh = "0.57"
ssh-key = "0.6"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

regex = "1"
bytes = "1"
strip-ansi-escapes = "0.2"

thiserror = "1"

log = "0.4"

once_cell = "1"

serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
textfsm-rust = "0.1"
serde_json = "1"
