[package]
name = "ferrissh"
version = "0.2.0"
edition = "2024"
authors = ["Joshua Benz <voidsifr@gmail.com>"]
description = "Async SSH CLI scraper library for network device automation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshbenz/ferrissh"
homepage = "https://github.com/joshbenz/ferrissh"
documentation = "https://docs.rs/ferrissh"
keywords = ["ssh", "network", "automation", "async", "cli"]
categories = ["network-programming", "asynchronous"]
readme= "../README.md"

[dependencies]
russh = "0.57"
ssh-key = "0.6"

tokio = { version = "1", features = ["full"] }

regex = "1"
bytes = "1"
strip-ansi-escapes = "0.2"

thiserror = "1"

log = "0.4"

serde = { version = "1", features = ["derive"] }
indexmap = "2.13.0"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
textfsm-rust = { version = "0.3.1", features = ["serde"] }
serde_json = "1"
